Mqtt client connection has been pulled out from device and node classes. Some of the functionality in the base class has been pulled down to the child classes where they belong

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,13 @@ dependencies = [
 ]
 requires-python = ">=3.7"
 
+[project.optional-dependencies]
+dev = ["pytest"]
+
+[tool.pytest.ini_options]
+pythonpath = ["src"]
+testpaths = ["tests"]
+
 [project.urls]
 Homepage = "https://github.com/javier-fg/mqtt-spb-wrapper"
 
